--- a/app/globals.css
+++ b/app/globals.css
@@ -77,3 +77,14 @@
   }
 }
 
+.text-focus-in{-webkit-animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both;animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both}
+
+._hidden {
+  opacity: 0;
+}
+
+._show {
+  opacity: 0;
+  transition: all 3s;
+  opacity: 1;
+    }
